--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,10 @@
         {% endblock %}
     </head>
     <body>
+    <nav>
+        <h1>Dashboard</h1>
+    </nav>
+
         {% block body %}{% endblock %}
     </body>
 </html>
